--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -15,6 +15,7 @@
                         <h3 class="card-title">Log In</h3>
                         <form action="" method="post" novalidate>
                             {% csrf_token %}
+                            <input type="hidden" name="next" value="{{ next }}">
                             {% include 'includes/form.html' %}
                             <button type="submit" class="btn btn-primary btn-block">Log In</button>
                         </form>
@@ -25,7 +26,7 @@
                 </div>
                 <div class="text-center py-2">
                     <small>
-                        <a href="#" class="text-muted">Forgot Your Password</a>
+                        <a href="#">Forgot Your Password</a>
                     </small>
                 </div>
             </div>
