--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                         <a class="btn btn-outline-secondary" href="{% url 'accounts:login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-outline-secondary" href="{% url 'accounts:signup' %}">Signup</a>
+                        <a class="btn btn-outline-primary" href="{% url 'accounts:signup' %}">Signup</a>
                     </li>
                 </ul>
                 {% endif %}
