--- a/templates/boards/reply_topic.html
+++ b/templates/boards/reply_topic.html
@@ -5,6 +5,10 @@
 
 {% block title %}Post a reply{% endblock %}
 
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'css/simplemde.min.css' %}">
+{% endblock %}
+
 {% block breadcrumb %}
   <li class="breadcrumb-item"><a href="{% url 'boards:home' %}">Boards</a></li>
   <li class="breadcrumb-item"><a href="{% url 'boards:board_topics' topic.board.pk %}">{{ topic.board.name }}</a></li>
@@ -16,11 +20,11 @@
 
   <form method="post" class="mb-4">
     {% csrf_token %}
-    {% include 'includes/form.html' %}
+    {{form}}
     <button type="submit" class="btn btn-success">Post a reply</button>
   </form>
 
-  {% for post in topic.posts.all %}
+  {% for post in topic.get_last_ten_posts %}
     <div class="card mb-2">
       <div class="card-body p-3">
         <div class="row mb-3">
@@ -31,9 +35,17 @@
             <small class="text-muted">{{ post.created_at }}</small>
           </div>
         </div>
-        {{ post.message }}
+        {{ post.get_message_as_markdown }}
       </div>
     </div>
   {% endfor %}
 
+{% endblock %}
+
+
+{% block javascript %}
+  <script src="{% static 'js/simplemde.min.js' %}"></script>
+  <script>
+    var simplemde = new SimpleMDE();
+  </script>
 {% endblock %}
