--- a/templates/boards/topics.html
+++ b/templates/boards/topics.html
@@ -10,9 +10,10 @@
 
 {% block content %}
 
+
 <div class="mb-4">
-    <a href="{% url 'boards:new_topic' boards.pk %}" class="btn btn-primary">New Topic</a>
-</div>
+    <a href="{% url 'boards:new_topic' boards.pk %}" class="btn btn-primary">New topic</a>
+  </div>
 
 <table class="table">
     <thead class="thead-inverse">
@@ -24,16 +25,33 @@
             <th>Last Update</th>
         </tr>
     </thead>
-    <tbody>
-        {% for topic in boards.topics.all %}
-        <tr>
-            <td><a href="{% url 'boards:topic_posts' topic.board.pk topic.pk %}">{{ topic.subject }}</a></td>
-            <td>{{ topic.starter.username }}</td>
-            <td>{{ topic.replies }}</td>
-            <td>{{ topic.views }}</td>
-            <td>{{ topic.last_updated }}</td>
-        </tr>
-        {% endfor %}
+        <tbody>
+    {% for topic in topics %}
+    {% url 'boards:topic_posts' topic.board.pk topic.pk as topic_url %}
+    <tr>
+        <td>
+            <p class="mb-0">
+                <a href="{{ topic_url }}">{{ topic.subject }}</a>
+            </p>
+            <small class="text-muted">
+                Pages:
+                {% for i in topic.get_page_range %}
+                <a href="{{ topic_url }}?page={{ i }}">{{ i }}</a>
+                {% endfor %}
+                {% if topic.has_many_pages %}
+                ... <a href="{{ topic_url }}?page={{ topic.get_page_count }}">Last Page</a>
+                {% endif %}
+            </small>
+        </td>
+        <td class="align-middle">{{ topic.starter.username }}</td>
+        <td class="align-middle">{{ topic.replies }}</td>
+        <td class="align-middle">{{ topic.views }}</td>
+        <td class="align-middle">{{ topic.last_updated }}</td>
+    </tr>
+    {% endfor %}
     </tbody>
 </table>
+{% include 'includes/pagination.html' %}
 {% endblock %}
+
+
